<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/new_team"
        android:id="@+id/textView2"
        android:textSize="@dimen/new_team_titel_size"
        android:fontFamily="@string/title_font"
        android:gravity="center"
        android:layout_margin="5dp"
        android:layout_weight="10" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="90">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/team_name_label"
            android:id="@+id/txt_name" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText"
            android:layout_margin="5dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/rating_label"
            android:id="@+id/textView" />

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ratingBar" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_picture_button"
            android:onClick="addImage"
            android:id="@+id/button" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="100"
            android:layout_gravity="right">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:weightSum="100">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:id="@+id/imageView"
                    android:layout_weight="50"
                    android:scaleType="centerCrop"
                    android:layout_gravity="center_horizontal" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_button"
                    android:id="@+id/button2"
                    android:layout_gravity="right" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
